// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create an OnDeploy 1`] = `
{
  "data": {
    "aws_lambda_invocation": {
      "my_on_deploy_Invocation_1A26E3B9": {
        "depends_on": [],
        "function_name": "\${aws_lambda_function.my_on_deploy_Function_59669FC0.function_name}",
        "input": "{}",
      },
    },
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_on_deploy_Function_CloudwatchLogGroup_A6EB6F36": {
        "name": "/aws/lambda/Function-c88c90bc",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_on_deploy_Function_IamRole_76DF13CA": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_on_deploy_Function_IamRolePolicy_AA6273E9": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.my_on_deploy_Function_IamRole_76DF13CA.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_on_deploy_Function_IamRolePolicyAttachment_505E5C37": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_on_deploy_Function_IamRole_76DF13CA.name}",
      },
    },
    "aws_lambda_function": {
      "my_on_deploy_Function_59669FC0": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Function-c88c90bc",
          },
        },
        "function_name": "Function-c88c90bc",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.my_on_deploy_Function_IamRole_76DF13CA.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_on_deploy_Function_S3Object_69D52AC4.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "my_on_deploy_Function_S3Object_69D52AC4": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`create an OnDeploy 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.7",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "ParameterRegistrar": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "hidden": true,
                },
                "id": "ParameterRegistrar",
                "path": "root/Default/ParameterRegistrar",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.7",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_on_deploy": {
                "children": {
                  "Function": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "Asset",
                        "path": "root/Default/my_on_deploy/Function/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_on_deploy/Function/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_on_deploy/Function/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "IamRole",
                        "path": "root/Default/my_on_deploy/Function/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_on_deploy/Function/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_on_deploy/Function/IamRolePolicyAttachment",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "S3Object",
                        "path": "root/Default/my_on_deploy/Function/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "Function",
                    "path": "root/Default/my_on_deploy/Function",
                  },
                  "Invocation": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformDataSource",
                      "version": "0.20.7",
                    },
                    "display": {},
                    "id": "Invocation",
                    "path": "root/Default/my_on_deploy/Invocation",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "Run code during the app's deployment.",
                  "title": "OnDeploy",
                },
                "id": "my_on_deploy",
                "path": "root/Default/my_on_deploy",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.7",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.7",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.7",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`execute OnDeploy after other resources 1`] = `
{
  "data": {
    "aws_lambda_invocation": {
      "my_on_deploy_Invocation_1A26E3B9": {
        "depends_on": [
          "aws_s3_bucket.my_bucket",
        ],
        "function_name": "\${aws_lambda_function.my_on_deploy_Function_59669FC0.function_name}",
        "input": "{}",
      },
    },
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_on_deploy_Function_CloudwatchLogGroup_A6EB6F36": {
        "name": "/aws/lambda/Function-c88c90bc",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_on_deploy_Function_IamRole_76DF13CA": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_on_deploy_Function_IamRolePolicy_AA6273E9": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.my_on_deploy_Function_IamRole_76DF13CA.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_on_deploy_Function_IamRolePolicyAttachment_505E5C37": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_on_deploy_Function_IamRole_76DF13CA.name}",
      },
    },
    "aws_lambda_function": {
      "my_on_deploy_Function_59669FC0": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Function-c88c90bc",
          },
        },
        "function_name": "Function-c88c90bc",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.my_on_deploy_Function_IamRole_76DF13CA.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_on_deploy_Function_S3Object_69D52AC4.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_object": {
      "my_on_deploy_Function_S3Object_69D52AC4": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`execute OnDeploy after other resources 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.7",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "ParameterRegistrar": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "hidden": true,
                },
                "id": "ParameterRegistrar",
                "path": "root/Default/ParameterRegistrar",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.7",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.7",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "my_on_deploy": {
                "children": {
                  "Function": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "Asset",
                        "path": "root/Default/my_on_deploy/Function/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_on_deploy/Function/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_on_deploy/Function/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "IamRole",
                        "path": "root/Default/my_on_deploy/Function/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_on_deploy/Function/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_on_deploy/Function/IamRolePolicyAttachment",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "S3Object",
                        "path": "root/Default/my_on_deploy/Function/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "Function",
                    "path": "root/Default/my_on_deploy/Function",
                  },
                  "Invocation": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformDataSource",
                      "version": "0.20.7",
                    },
                    "display": {},
                    "id": "Invocation",
                    "path": "root/Default/my_on_deploy/Invocation",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "Run code during the app's deployment.",
                  "title": "OnDeploy",
                },
                "id": "my_on_deploy",
                "path": "root/Default/my_on_deploy",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.7",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.7",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.7",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`execute OnDeploy before other resources 1`] = `
{
  "data": {
    "aws_lambda_invocation": {
      "my_on_deploy_Invocation_1A26E3B9": {
        "depends_on": [],
        "function_name": "\${aws_lambda_function.my_on_deploy_Function_59669FC0.function_name}",
        "input": "{}",
      },
    },
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_on_deploy_Function_CloudwatchLogGroup_A6EB6F36": {
        "name": "/aws/lambda/Function-c88c90bc",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_on_deploy_Function_IamRole_76DF13CA": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_on_deploy_Function_IamRolePolicy_AA6273E9": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.my_on_deploy_Function_IamRole_76DF13CA.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_on_deploy_Function_IamRolePolicyAttachment_505E5C37": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_on_deploy_Function_IamRole_76DF13CA.name}",
      },
    },
    "aws_lambda_function": {
      "my_on_deploy_Function_59669FC0": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Function-c88c90bc",
          },
        },
        "function_name": "Function-c88c90bc",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.my_on_deploy_Function_IamRole_76DF13CA.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_on_deploy_Function_S3Object_69D52AC4.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "depends_on": [
          "\${data.aws_lambda_invocation.my_on_deploy_Invocation_1A26E3B9}",
        ],
        "force_destroy": false,
      },
    },
    "aws_s3_object": {
      "my_on_deploy_Function_S3Object_69D52AC4": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`execute OnDeploy before other resources 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.7",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "ParameterRegistrar": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "hidden": true,
                },
                "id": "ParameterRegistrar",
                "path": "root/Default/ParameterRegistrar",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.7",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.7",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "my_on_deploy": {
                "children": {
                  "Function": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "Asset",
                        "path": "root/Default/my_on_deploy/Function/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_on_deploy/Function/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "Default",
                        "path": "root/Default/my_on_deploy/Function/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "IamRole",
                        "path": "root/Default/my_on_deploy/Function/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_on_deploy/Function/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_on_deploy/Function/IamRolePolicyAttachment",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.7",
                        },
                        "display": {},
                        "id": "S3Object",
                        "path": "root/Default/my_on_deploy/Function/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "Function",
                    "path": "root/Default/my_on_deploy/Function",
                  },
                  "Invocation": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformDataSource",
                      "version": "0.20.7",
                    },
                    "display": {},
                    "id": "Invocation",
                    "path": "root/Default/my_on_deploy/Invocation",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "Run code during the app's deployment.",
                  "title": "OnDeploy",
                },
                "id": "my_on_deploy",
                "path": "root/Default/my_on_deploy",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.7",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.7",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.7",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
